docs: make Hydra migration lab fully student-operated